--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login_mobile.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login_mobile.vm
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>DHIS 2</title>
+<title>Riddance DVT</title>
 
 <meta name="viewport" content="width=device-width, user-scalable=no" />
 <link rel="stylesheet" href="../css/login_mobile.css" />
@@ -13,7 +13,7 @@
 <div id="wrap">
 
 <div id="header">
-	<a href="login.action" tabindex="-1"><img src="logo_mobile.png" width="88" height="24" alt="DHIS 2"></a>
+	<a href="login.action" tabindex="-1"><!--img src="logo_mobile.png" width="88" height="24" alt="DHIS 2"-->Riddance DVT</a>
 </div>
 
 <div id="content" align="center" style="text-align: left;">
