--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -1,316 +1,55 @@
-<!DOCTYPE HTML>
-<html class="loginPage">
-<head>
-    <title>$!encoder.htmlEncode( ${applicationTitle} )</title>
-    <meta name="description" content="DHIS 2">
-    <meta name="keywords" content="DHIS 2">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <!--link type="text/css" rel="stylesheet" href="../boostrap/css/bootstrap.min.css">
-    <script type="text/javascript" src="../javascripts/jQuery/jquery.min.js"></script>
-    <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../javascripts/slick.js"></script-->
-
-
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js" type="text/javascript"></script>
-    <script type="text/javascript" src="../javascripts/slick.js"></script>
-    <!--script type="text/javascript" src="../javascripts/bootstrap.min.js"></script-->
-
-    <script type="text/javascript" src="login.js"></script>
-
-    <link type="text/css" rel="stylesheet" href="../css/widgets.css">
-    <link type="text/css" rel="stylesheet" href="../css/login.css">
-    <link type="text/css" rel="stylesheet" href="../../api/files/style/external" />
-
-
-    <style type="text/css">
-
-        #footerArea{
-            position: relative;
-            margin-top: 50px;
-        }
-
-        .benhvien_logo{
-            width: 212 px !important;
-            height: 185 px !important;
-        };
-        /* Slider */
-        .slick-slide {
-            margin: 0px 20px;
-
-        }
-
-        .slick-slide img {
-            width: 100%;
-        }
-
-        .slick-slider
-        {
-            position: relative;
-
-            display: block;
-            box-sizing: border-box;
-
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-
-            -webkit-touch-callout: none;
-            -khtml-user-select: none;
-            -ms-touch-action: pan-y;
-            touch-action: pan-y;
-            -webkit-tap-highlight-color: transparent;
-        }
-
-        .slick-list
-        {
-            position: relative;
-
-            display: block;
-            overflow: hidden;
-
-            margin: 0;
-            padding: 0;
-        }
-        .slick-list:focus
-        {
-            outline: none;
-        }
-        .slick-list.dragging
-        {
-            cursor: pointer;
-            cursor: hand;
-        }
-
-        .slick-slider .slick-track,
-        .slick-slider .slick-list
-        {
-            -webkit-transform: translate3d(0, 0, 0);
-            -moz-transform: translate3d(0, 0, 0);
-            -ms-transform: translate3d(0, 0, 0);
-            -o-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-        }
-
-        .slick-track
-        {
-            position: relative;
-            top: 0;
-            left: 0;
-
-            display: block;
-        }
-        .slick-track:before,
-        .slick-track:after
-        {
-            display: table;
-
-            content: '';
-        }
-        .slick-track:after
-        {
-            clear: both;
-        }
-        .slick-loading .slick-track
-        {
-            visibility: hidden;
-        }
-
-        .slide
-        {
-            display: none;
-            float: left;
-            height: 100%;
-            min-height: 1px;
-            margin-left: 50px;
-        }
-        [dir='rtl'] .slick-slide
-        {
-            float: right;
-        }
-        .slick-slide img
-        {
-            display: block;
-        }
-        .slick-slide.slick-loading img
-        {
-            display: none;
-        }
-        .slick-slide.dragging img
-        {
-            pointer-events: none;
-        }
-        .slick-initialized .slick-slide
-        {
-            display: block;
-        }
-        .slick-loading .slick-slide
-        {
-            visibility: hidden;
-        }
-        .slick-vertical .slick-slide
-        {
-            display: block;
-
-            height: auto;
-
-            border: 1px solid transparent;
-        }
-        .slick-arrow.slick-hidden {
-            display: none;
-        }
-
-    </style>
-
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('.customer-logos').slick({
-                slidesToShow: 6,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 4000,
-                arrows: false,
-                dots: false,
-                pauseOnHover: false,
-                responsive: [{
-                    breakpoint: 768,
-                    settings: {
-                        slidesToShow: 4
-                    }
-                }, {
-                    breakpoint: 520,
-                    settings: {
-                        slidesToShow: 2
-                    }
-                }]
-            });
-        });
-    </script>
-</head>
-<body class="loginPage">
-<h1 style="display:none">$!encoder.htmlEncode( ${applicationTitle} )</h1>
-<div style="display:none">Riddance DVT</div>
-<div>
-    #if ( $keyFlag )
-        <!--img id="flagArea" src="../flags/$!{keyFlagImage}"-->
-        <img id="" src="../img/horus_logo.jpg" style="/* width: 108px; */height: 72px;padding: 5px;">
-    #end
-    #if ( $applicationTitle )
-        <!--span id="titleArea">$!encoder.htmlEncode( ${applicationTitle} )</span-->
-    #end
-    #if ( $keyApplicationIntro )
-        <span id="introArea">$!{keyApplicationIntro}</span>
-    #end
-</div>
-    #if ( $keyConfig.selfRegistrationAllowed() )
-    <div id="accountArea">
-        <a id="createAccountButton" class="greenButtonLink" href="account.action">Create an account</a>
-    </div>
-    #end
-<div id="loginField">
-    <div id="loginArea">
-        <!--div id="bannerArea">
-        <a href="#"><img src="../img/riddance_dvt_logo.png" style="border:none"></a>
-        </div-->
-
-        <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
-            <div>
-                <div id="signInLabel">Sign in</div>
-                <div><input type="text" id="j_username" name="j_username" placeholder="Username" style="color: black;"></div>
-                <div><input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password" style="color: black;"></div>
-            </div>
-            <div id="submitDiv">
-                <input id="submit" class="button" type="submit" value="Sign in">
-            </div>
-            #if( $keyAccountRecovery )
-                <div style="padding-bottom: 10px">
-                    <a id="forgotPasswordLink" href="recovery.action">Forgot password?</a>
-                </div>
-            #end
-            #if( $keyConfig.selfRegistrationAllowed() )
-                <div style="padding-bottom: 10px">
-                    <a id="createAccountLink" href="account.action">Create an account</a>
-                </div>
-            #end
-        </form>
-        #if( $keyOpenIdProvider )
-            <form id="openIdLoginForm" action="../../dhis-web-commons-security/openid.action" method="post">
-                  <input name="openid_identifier" type="hidden" value="$keyOpenIdProvider"/>
-                <div id="submitDiv">
-                    #if( $keyOpenIdProviderLabel )
-                        <input style="width: 269px;" id="submit" class="button" type="submit" value="$keyOpenIdProviderLabel">
-                    #else
-                        <input style="width: 269px;" id="submit" class="button" type="submit" value="Sign in with OpenID">
-                    #end
-                </div>
-            </form>
-        #end
-        #if( $failed == true )
-            <div id="loginMessage">Wrong username or password</div>
-        #end
-        #if ( $keyApplicationNotification )
-            <div id="notificationArea">
-                $!{keyApplicationNotification}
-            </div>
-        #end
-        <!--[if lte IE 8]>
-        <div id="notificationArea" style="color: white; background-color: red;">$i18n.getString( "unsupported_browser" )</div>
-        <![endif]-->
-    </div>
-</div>
-
-<!--div id="parnerLogo" style="width: 100%; overflow: hidden;">
-    <div style="width: 25%;overflow: hidden;float: left;">
-        <div syle="display: block;margin-left: auto;margin-right: auto;">
-            <img class="benhvien_logo" src="../img/choray_logo.jpg" style="width: 218px;height: 185px;"></img>
+<!DOCTYPE html>
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6 lt8"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7 lt8"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8 lt8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="UTF-8" />
+        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
+        <title>ClinicalDatas</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/riddance_dvt.css" />
+		<script type="text/javascript" src="login.js"></script>
+    </head>
+    <body>
+        <div class="container">
+           
+            <header>
+                <!--h1>ClinicalDatas</h1-->
+				
+            </header>
+            <section>				
+                <div id="container_demo" >
+                    <a class="hiddenanchor" id="toregister"></a>
+                    <a class="hiddenanchor" id="tologin"></a>
+                    <div id="wrapper">
+                        <div id="login" class="animate form">
+                            <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
+                                <h1>Sign in</h1> 
+                                <p> 
+                                    <label for="username" class="uname" > Your username </label>
+                                    <input type="text" id="j_username" name="j_username" placeholder="Username"/>
+                                </p>
+                                <p> 
+                                    <label for="password" class="youpasswd"> Your password </label>
+									<input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password">                                <p class="login button"> 
+                                   <input id="submit" class="button" type="submit" value="Sign in">
+								</p>
+                            </form>
+                        </div>
+						
+                    </div>
+                </div>  
+            </section>
         </div>
-    </div>
-    <div style="width: 25%;overflow: hidden;float: left;">
-        <div syle="display: block;margin-left: auto;margin-right: auto;">
-            <img class="benhvien_logo" src="../img/bachmai_logo.jpg" style="width: 218px;height: 185px;"></img>
-        </div>
-    </div>
-    <div style="width: 25%;overflow: hidden;float: left;">
-        <div syle="display: block;margin-left: auto;margin-right: auto;">
-            <img class="benhvien_logo" src="../img/yhanoi_logo.jpeg" style="width: 218px;height: 185px;"></img>
-        </div>
-    </div>
-    <div style="width: 25%;overflow: hidden;float: left;">
-        <div syle="display: block;margin-left: auto;margin-right: auto;">
-            <img class="benhvien_logo" src="../img/vietduc_logo.jpg" style="width: 218px;height: 185px;"></img>
-        </div>
-    </div>
-</div-->
-
-<div class="customer-logos">
-    <div class="slide"><img src="../img/choray_logo.jpg"></div>
-    <div class="slide"><img src="../img/bachmai_logo.jpg"></div>
-    <div class="slide"><img src="../img/yhanoi_logo.jpeg"></div>
-    <div class="slide"><img src="../img/vietduc_logo.jpg"></div>
-    <div class="slide"><img src="../img/choray_logo.jpg"></div>
-    <div class="slide"><img src="../img/bachmai_logo.jpg"></div>
-    <div class="slide"><img src="../img/yhanoi_logo.jpeg"></div>
-    <div class="slide"><img src="../img/vietduc_logo.jpg"></div>
-</div>
-
-<div id="footerArea">
-    <!--div id="leftFooterArea" class="innerFooterArea">
-	        	Powered by <a href="http://www.dhis2.org">DHIS 2</a>&nbsp; <span id="applicationFooter">$!{keyApplicationFooter}</span>
-		    </div-->
-    <div id="rightFooterArea" class="innerFooterArea">
-        <span id="applicationRightFooter">$!{keyApplicationRightFooter}</span>
-        <select id="localeSelect" onchange="login.localeChanged()" style="margin-left: 30px">
-            <option value="">[ Change language ]</option>
-            #foreach( $locale in $availableLocales )
-                <option value="${locale.language}">${locale.displayName}</option>
-            #end
-        </select>
-    </div>
-</div>
-</body>
+	<footer class="navbar-fixed-bottom footer">
+      <div class="container" style="background-color: #f5f5f5 !important;">
+        <p class="text-muted">&copy; 2017 Horus Co. Ltd | All Rights Reserved. Developed by Horus.</p>
+      </div>
+    </footer>
+			
+    </body>
 </html>
