--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/light_blue/light_blue.css
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/css/light_blue/light_blue.css
@@ -65,7 +65,8 @@ input[type=text],input[type=password],input[type=email],textarea
 
 #headerBanner
 {
-  position: absolute;
+  /*position: absolute;*/
+  position: inherit !important;
   top: 13px;
   left: 55px;
 }
