--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -4,52 +4,61 @@
 <!--[if IE 8 ]>    <html lang="en" class="no-js ie8 lt8"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="UTF-8" />
-        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-        <title>ClinicalDatas</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-		<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/riddance_dvt.css" />
-		<script type="text/javascript" src="login.js"></script>
-    </head>
-    <body>
-        <div class="container">
-           
-            <header>
-                <!--h1>ClinicalDatas</h1-->
-				
-            </header>
-            <section>				
-                <div id="container_demo" >
-                    <a class="hiddenanchor" id="toregister"></a>
-                    <a class="hiddenanchor" id="tologin"></a>
-                    <div id="wrapper">
-                        <div id="login" class="animate form">
-                            <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
-                                <h1>Sign in</h1> 
-                                <p> 
-                                    <label for="username" class="uname" > Your username </label>
-                                    <input type="text" id="j_username" name="j_username" placeholder="Username"/>
-                                </p>
-                                <p> 
-                                    <label for="password" class="youpasswd"> Your password </label>
-									<input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password">                                <p class="login button"> 
-                                   <input id="submit" class="button" type="submit" value="Sign in">
-								</p>
-                            </form>
-                        </div>
-						
-                    </div>
-                </div>  
-            </section>
+<head>
+    <meta charset="UTF-8" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
+    <title>ClinicalDatas</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/riddance_dvt.css" />
+    <script type="text/javascript" src="login.js"></script>
+    <!--script>history.pushState(null, null, '/wwf1');</script-->
+</head>
+<body>
+<div class="container">
+
+    <header>
+        <!--h1>ClinicalDatas</h1-->
+
+    </header>
+    <section>
+        <div id="container_demo" >
+            <a class="hiddenanchor" id="toregister"></a>
+            <a class="hiddenanchor" id="tologin"></a>
+            <div id="wrapper">
+                <div id="login" class="animate form">
+                    <form id="loginForm" action="../../dhis-web-commons-security/login.action" method="post">
+                        <h1>Sign in</h1>
+                        <p>
+                            <label for="username" class="uname" > Your username </label>
+                            <input type="text" id="j_username" name="j_username" placeholder="Username"/>
+                        </p>
+                        <p>
+                            <label for="password" class="youpasswd"> Your password </label>
+                            <input type="password" id="j_password" name="j_password" autocomplete="off" placeholder="Password">                                <p class="login button">
+                        <input id="submit" class="button" type="submit" value="Sign in">
+                    </p>
+                    </form>
+                </div>
+
+            </div>
         </div>
-	<footer class="navbar-fixed-bottom footer">
-      <div class="container" style="background-color: #f5f5f5 !important;">
+    </section>
+</div>
+<footer class="navbar-fixed-bottom footer">
+    <div class="container" style="background-color: #f5f5f5 !important;">
         <p class="text-muted">&copy; 2017 Horus Co. Ltd | All Rights Reserved. Developed by Horus.</p>
-      </div>
-    </footer>
-			
-    </body>
+    </div>
+</footer>
+
+</body>
+<!--script>
+    // self executing function here
+    (function() {
+        // your page initialization code here
+        // the DOM will be available here
+        history.pushState(null, null, 'wwf1');
+    })();
+</script-->
 </html>
